--- a/Addons/Shop/View/default/Order/sales.html
+++ b/Addons/Shop/View/default/Order/sales.html
@@ -43,6 +43,7 @@
                             <tr>
                                 <td>{$goodsData['title']}</td>
                                 <td>{$goodsData['sales_amount']}</td>
+                                <td>{$goodsData['sales_num']}</td>
                                 <!--<td>{$goodsData['unit']|getSpecUnitByID}</td>-->
                             </tr>
                         </volist>
