--- a/Addons/Shop/View/default/Admin/sales.html
+++ b/Addons/Shop/View/default/Admin/sales.html
@@ -10,6 +10,7 @@
         <button id="start" data-options='{"type":"date","beginYear":2015,"endYear":2016}' class="btn mui-btn mui-btn-block">选择起始时间</button>
         <h5 class="mui-content-padded">截止时间</h5>
         <button id="end" data-options='{"type":"date","beginYear":2015,"endYear":2016}' class="btn mui-btn mui-btn-block">选择起始时间</button>
+        <button id="calBtn" type="button" class="mui-btn mui-btn-danger mui-btn-block">开始统计</button>
     </div>
 </div>
 
@@ -19,46 +20,92 @@
 <script>
     (function($) {
         $.init();
-
-        var curBtn;
-        var btns = $('.btn');
-        btns.each(function(i, btn) {
-            btn.addEventListener('tap', function() {
-                var optionsJson = this.getAttribute('data-options') || '{}';
-                var options = JSON.parse(optionsJson);
-                var id = this.getAttribute('id');
-                curBtn = this;
+        var startDate,endDate;
+        var startBtn = $('#start')[0];
+        startBtn.addEventListener('tap', function() {
+            var optionsJson = this.getAttribute('data-options') || '{}';
+            var options = JSON.parse(optionsJson);
+            var id = this.getAttribute('id');
+            /*
+             * 首次显示时实例化组件
+             * 示例为了简洁，将 options 放在了按钮的 dom 上
+             * 也可以直接通过代码声明 optinos 用于实例化 DtPicker
+             */
+            var picker = new $.DtPicker(options);
+            picker.show(function(rs) {
                 /*
-                 * 首次显示时实例化组件
-                 * 示例为了简洁，将 options 放在了按钮的 dom 上
-                 * 也可以直接通过代码声明 optinos 用于实例化 DtPicker
+                 * rs.value 拼合后的 value
+                 * rs.text 拼合后的 text
+                 * rs.y 年，可以通过 rs.y.vaue 和 rs.y.text 获取值和文本
+                 * rs.m 月，用法同年
+                 * rs.d 日，用法同年
+                 * rs.h 时，用法同年
+                 * rs.i 分（minutes 的第二个字母），用法同年
                  */
-                var picker = new $.DtPicker(options);
-                picker.show(function(rs) {
-                    /*
-                     * rs.value 拼合后的 value
-                     * rs.text 拼合后的 text
-                     * rs.y 年，可以通过 rs.y.vaue 和 rs.y.text 获取值和文本
-                     * rs.m 月，用法同年
-                     * rs.d 日，用法同年
-                     * rs.h 时，用法同年
-                     * rs.i 分（minutes 的第二个字母），用法同年
-                     */
-                    //result.innerText = '选择结果: ' + rs.text;
-                    /*
-                     * 返回 false 可以阻止选择框的关闭
-                     * return false;
-                     */
-                    /*
-                     * 释放组件资源，释放后将将不能再操作组件
-                     * 通常情况下，不需要示放组件，new DtPicker(options) 后，可以一直使用。
-                     * 当前示例，因为内容较多，如不进行资原释放，在某些设备上会较慢。
-                     * 所以每次用完便立即调用 dispose 进行释放，下次用时再创建新实例。
-                     */
-                    //picker.dispose();
-                    curBtn.innerText = rs.text;
-                });
-            }, false);
+                //result.innerText = '选择结果: ' + rs.text;
+                /*
+                 * 返回 false 可以阻止选择框的关闭
+                 * return false;
+                 */
+                /*
+                 * 释放组件资源，释放后将将不能再操作组件
+                 * 通常情况下，不需要示放组件，new DtPicker(options) 后，可以一直使用。
+                 * 当前示例，因为内容较多，如不进行资原释放，在某些设备上会较慢。
+                 * 所以每次用完便立即调用 dispose 进行释放，下次用时再创建新实例。
+                 */
+                picker.dispose();
+                startBtn.innerText = rs.text;
+                startDate = rs.text;
+            });
+        }, false);
+
+        var endBtn = $("#end")[0];
+        endBtn.addEventListener('tap', function() {
+            var optionsJson = this.getAttribute('data-options') || '{}';
+            var options = JSON.parse(optionsJson);
+            var id = this.getAttribute('id');
+            /*
+             * 首次显示时实例化组件
+             * 示例为了简洁，将 options 放在了按钮的 dom 上
+             * 也可以直接通过代码声明 optinos 用于实例化 DtPicker
+             */
+            var picker = new $.DtPicker(options);
+            picker.show(function(rs) {
+                /*
+                 * rs.value 拼合后的 value
+                 * rs.text 拼合后的 text
+                 * rs.y 年，可以通过 rs.y.vaue 和 rs.y.text 获取值和文本
+                 * rs.m 月，用法同年
+                 * rs.d 日，用法同年
+                 * rs.h 时，用法同年
+                 * rs.i 分（minutes 的第二个字母），用法同年
+                 */
+                //result.innerText = '选择结果: ' + rs.text;
+                /*
+                 * 返回 false 可以阻止选择框的关闭
+                 * return false;
+                 */
+                /*
+                 * 释放组件资源，释放后将将不能再操作组件
+                 * 通常情况下，不需要示放组件，new DtPicker(options) 后，可以一直使用。
+                 * 当前示例，因为内容较多，如不进行资原释放，在某些设备上会较慢。
+                 * 所以每次用完便立即调用 dispose 进行释放，下次用时再创建新实例。
+                 */
+                picker.dispose();
+                endBtn.innerText = rs.text;
+                endDate = rs.text;
+            });
+        }, false);
+
+        var calBtn = $('#calBtn')[0];
+        calBtn.addEventListener('tap', function(){
+            if(!startDate){
+                mui.toast('请选择统计开始日期');
+            }else if(!endDate){
+                mui.toast('请选择统计截止日期');
+            }else{
+                window.location.assign('index.php/addon/Shop/Admin/salesDetail?start='+startDate+'&end='+endDate);
+            }
         });
     })(mui);
 </script>
