增加微信端销售统计

--- a/Addons/Shop/View/default/Admin/sales.html
+++ b/Addons/Shop/View/default/Admin/sales.html
@@ -104,7 +104,7 @@
             }else if(!endDate){
                 mui.toast('请选择统计截止日期');
             }else{
-                window.location.assign('index.php/addon/Shop/Admin/salesDetail?start='+startDate+'&end='+endDate);
+                window.location.assign('salesDetail?start='+startDate+'&end='+endDate);
             }
         });
     })(mui);
