增加微信端销售统计

--- a/Addons/Shop/View/default/Admin/send.html
+++ b/Addons/Shop/View/default/Admin/send.html
@@ -25,7 +25,7 @@
             }
             else{
 
-                window.location.assign("index.php/addon/Shop/Admin/sendDetail.html?mobile="+mobileInput.value);
+                window.location.assign("/index.php/addon/Shop/Admin/sendDetail.html?mobile="+mobileInput.value);
             }
         });
     })(mui);
