增加微信端销售统计

--- a/Addons/Shop/View/default/Admin/sales.html
+++ b/Addons/Shop/View/default/Admin/sales.html
@@ -9,7 +9,7 @@
         <h5 class="mui-content-padded">起始时间</h5>
         <button id="start" data-options='{"type":"date","beginYear":2015,"endYear":2016}' class="btn mui-btn mui-btn-block">选择起始时间</button>
         <h5 class="mui-content-padded">截止时间</h5>
-        <button id="end" data-options='{"type":"date","beginYear":2015,"endYear":2016}' class="btn mui-btn mui-btn-block">选择起始时间</button>
+        <button id="end" data-options='{"type":"date","beginYear":2015,"endYear":2016}' class="btn mui-btn mui-btn-block">选择截止时间</button>
         <button id="calBtn" type="button" class="mui-btn mui-btn-danger mui-btn-block">开始统计</button>
     </div>
 </div>
