优化：首页滚动卡顿的问题，去掉scroller外包。

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -16,9 +16,9 @@
         <span class="mui-tab-label">我的订单</span>
     </a>
 </nav>
-<div class="mui-bar mui-bar-nav" style="-webkit-transform: translate3d(0px, 0px, 0px) translateZ(0px); width: 100%">
+<!--<div class="mui-bar mui-bar-nav" style="-webkit-transform: translate3d(0px, 0px, 0px) translateZ(0px); width: 100%">
     <h1 class="mui-title">好之鲜水果超市</h1>
-</div>
+</div>-->
 <div class="mui-content">
     <div class="banner-picture">
         <volist name="slideShowList" id="slide">
