优化：首页滚动卡顿的问题，去掉scroller外包。

--- a/Addons/Shop/View/default/User/index.html
+++ b/Addons/Shop/View/default/User/index.html
@@ -20,7 +20,7 @@
     <h1 class="mui-title">好之鲜水果超市</h1>
 </div>
 <div class="mui-content">
-    <div class="banner-picture">
+    <div class="banner-picture" style="padding-top: 44px">
         <volist name="slideShowList" id="slide">
             <img class="header-img" data-original="{$slide.img|get_cover_url}">
         </volist>
