修改配货表前台展现，使其更加紧凑，增加按目录分类聚合。

--- a/Addons/Shop/View/default/User/_head.html
+++ b/Addons/Shop/View/default/User/_head.html
@@ -15,4 +15,13 @@
 
     <link href="{:ADDON_PUBLIC_PATH}/user/css/mui.min.css?v={:SITE_VERSION}" rel="stylesheet" type="text/css">
     <link href="{:ADDON_PUBLIC_PATH}/user/css/app.css?v={:SITE_VERSION}" rel="stylesheet" type="text/css">
+    <script>
+        var _hmt = _hmt || [];
+        (function() {
+            var hm = document.createElement("script");
+            hm.src = "//hm.baidu.com/hm.js?0567f3fd8855d4cbd45aa1633f68b532";
+            var s = document.getElementsByTagName("script")[0];
+            s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
 </head>
