修改配货表前台展现，使其更加紧凑，增加按目录分类聚合。

--- a/Addons/Shop/View/default/Order/orderSheet.html
+++ b/Addons/Shop/View/default/Order/orderSheet.html
@@ -27,7 +27,7 @@
                 <volist name="category_lists" id="category">
                     <b>{$category['title']}:</b>
                     <volist name="goods_lists" id="goods">
-                        <if condition="{$goods['category_id'] eq $category['id']}">
+                        <if condition="$goods['category_id'] eq $category['id']">
                             <p><span>{$goods['title']}</span><span>[{$goods['num']}份]</span></p>
                         </if>
                     </volist>
