修改后台订单列表 支付类型显示错误的问题，应该是支付类型，但显示成了支付状态

--- a/Addons/Shop/View/default/Order/lists.html
+++ b/Addons/Shop/View/default/Order/lists.html
@@ -51,7 +51,7 @@
                                 <td>{$data.uid}</td>
                                 <td>{$data.total_price}</td>
                                 <td>{$data.cTime|time_format}</td>
-                                <td>{$data.pay_type|getNamebyPayStatus}</td>
+                                <td>{$data.pay_type|getNamebyPayType}</td>
                                 <td>{$data.status_code|getNamebyOrderStatus}</td>
                             </tr>
                         </volist>
