--- a/Addons/Shop/View/default/User/bindUser.html
+++ b/Addons/Shop/View/default/User/bindUser.html
@@ -53,7 +53,7 @@
             mui.toast("请填写手机号");
             return false;
         }
-        var patrn = /^0?(13[0-9]|15[0123456789]|18[0123456789]|14[0123456789])[0-9]{8}$/;
+        var patrn = /^0?(13[0-9]|15[0123456789]|17[0123456789]|18[0123456789]|14[0123456789])[0-9]{8}$/;
         if (!patrn.exec($.trim(userPhone))) {
             mui.toast('手机号格式不正确，请确认填写了正确的号码');
             return false;
