fix bug：在苹果手机上 点击去结算按钮反应不灵敏

--- a/Addons/Shop/View/default/User/confirmOrder.html
+++ b/Addons/Shop/View/default/User/confirmOrder.html
@@ -9,7 +9,7 @@
         <span class="mui-tab-label">实付款:</span><span class="goods-price">￥<span id="totalPrice">{$total_price|wp_money_format}</span></span>
     </div>
     <div id="submitOrderTab" class="mui-tab-item one-key-pay">
-        <span class="settlement" style="background: transparent; border: 0; color: #F8FAFA">提交订单</span>
+        <span class="settlement" style="background: transparent; border: 0; color: #F8FAFA; width: 5rem">提交订单</span>
     </div>
 </nav>
 <div class="mui-bar mui-bar-nav">
