--- a/Addons/Shop/View/default/User/confirmOrder.html
+++ b/Addons/Shop/View/default/User/confirmOrder.html
@@ -8,8 +8,8 @@
 
         <span class="mui-tab-label">实付款:</span><span class="goods-price">￥<span id="totalPrice">{$total_price|wp_money_format}</span></span>
     </div>
-    <div id="submitOrderTab" class="mui-tab-item one-key-pay">
-        <span class="settlement" style="background: transparent; border: 0; color: #F8FAFA; width: 5rem">提交订单</span>
+    <div id="submitOrderTab" class="mui-tab-item one-key-pay" style="width: 5rem">
+        <span class="settlement" style="background: transparent; border: 0; color: #F8FAFA;">提交订单</span>
     </div>
 </nav>
 <div class="mui-bar mui-bar-nav">
