fix bug：在苹果手机上 点击去结算按钮反应不灵敏

--- a/Addons/Shop/View/default/User/confirmOrder.html
+++ b/Addons/Shop/View/default/User/confirmOrder.html
@@ -8,7 +8,7 @@
 
         <span class="mui-tab-label">实付款:</span><span class="goods-price">￥<span id="totalPrice">{$total_price|wp_money_format}</span></span>
     </div>
-    <div id="submitOrderTab" class="mui-tab-item one-key-pay" style="width: 5rem">
+    <div id="submitOrderTab" class="mui-tab-item one-key-pay" style="min-width: 5rem">
         <span class="settlement" style="background: transparent; border: 0; color: #F8FAFA;">提交订单</span>
     </div>
 </nav>
