--- a/Addons/Shop/View/default/User/cart.html
+++ b/Addons/Shop/View/default/User/cart.html
@@ -33,7 +33,7 @@
             <span class="mui-tab-label">全选</span>
             共<span id="totalCount">12</span>件, 总计<span class="goods-price">￥<span id="totalPrice">00.00</span></span>
         </div>
-        <div id="goToConfirmOrderTab" class="mui-tab-item one-key-pay" style="width: 5rem">
+        <div id="goToConfirmOrderTab" class="mui-tab-item one-key-pay" style="min-width: 5rem">
             <span id="goToConfirmOrderSpan" class="settlement" style="background: transparent; border: 0; color: #F8FAFA">去结算
             </span>
         </div>
