--- a/Addons/Shop/View/default/Public/user/css/app.css
+++ b/Addons/Shop/View/default/Public/user/css/app.css
@@ -234,3 +234,76 @@ i {
 	padding:5.625rem 0;
 }
 
+#jq22{
+	position: relative;
+	width: 780px;
+	height: 390px;
+	margin: 0 auto;
+	padding: 20px;
+	border: 1px solid #ddd;
+	background: url(../images/ly-plate-c.gif) 20px 20px no-repeat;
+}
+.plate {
+	position: relative;
+	float: left;
+	width: 390px;
+	height: 390px;
+	background-image: url(../images/lyplate.png);
+}
+.prize {
+	float: right;
+	width: 360px;
+	height: 390px;
+	font: 14px/1.5 "Microsoft Yahei";
+}
+.prize h4 {
+	margin: 80px 0 20px;
+	padding: 10px;
+	background-color: #eee;
+}
+.prize ul {
+	list-style-type: none;
+}
+.prize li {
+	margin: 10px;
+}
+#plateBtn {
+	position: absolute;
+	left: 88px;
+	top: 88px;
+	width: 214px;
+	height: 214px;
+	background-image: url(../images/rotate-static.png);
+	text-indent: -9999px;
+	overflow: hidden;
+}
+#result {
+	display: none;
+	position: absolute;
+	left: 65px;
+	top: 155px;
+	width: 300px;
+	height: 120px;
+	background-color: rgba(0,0,0,0.75);
+	filter: alpha(opacity=90);
+}
+#resultTxt {
+	padding: 45px 15px 0;
+	font: 16px "Microsoft Yahei";
+	color: #fff;
+	text-align: center;
+}
+#resultTxt em {
+	color: #ffea76;
+	font-style: normal;
+}
+#resultBtn {
+	position: absolute;
+	right: 5px;
+	top: 5px;
+	width: 25px;
+	height: 25px;
+	text-indent: -100px;
+	background-image: url(../images/close.png);
+	overflow: hidden;
+}
