--- a/Addons/Shop/View/default/User/prize.html
+++ b/Addons/Shop/View/default/User/prize.html
@@ -46,6 +46,59 @@
 
 <script type="text/javascript">
     mui.init({});
+    $(function(){
+        var $plateBtn = $('#plateBtn');
+        var $result = $('#result');
+        var $resultTxt = $('#resultTxt');
+        var $resultBtn = $('#resultBtn');
+
+        $plateBtn.click(function(){
+            var data = [0, 1, 2, 3, 4, 5, 6, 7];
+            data = data[Math.floor(Math.random()*data.length)];
+            switch(data){
+                case 1:
+                    rotateFunc(1,157,'恭喜你中了 <em>一等奖</em>');
+                    break;
+                case 2:
+                    rotateFunc(2,65,'恭喜你中了 <em>二等奖</em>');
+                    break;
+                case 3:
+                    rotateFunc(3,335,'恭喜你中了 <em>三等奖</em>');
+                    break;
+                case 4:
+                    rotateFunc(4,247,'恭喜你中了 <em>四等奖</em>');
+                    break;
+                case 5:
+                    rotateFunc(5,114,'谢谢参与，请再接再厉');
+                    break;
+                case 6:
+                    rotateFunc(6,24,'谢谢参与，请再接再厉');
+                    break;
+                case 7:
+                    rotateFunc(7,292,'谢谢参与，请再接再厉');
+                    break;
+                default:
+                    rotateFunc(0,203,'恭喜你中了 <em>参与奖</em>');
+            }
+        });
+
+        var rotateFunc = function(awards,angle,text){  //awards:奖项，angle:奖项对应的角度
+            $plateBtn.stopRotate();
+            $plateBtn.rotate({
+                angle: 0,
+                duration: 5000,
+                animateTo: angle + 1440,  //angle是图片上各奖项对应的角度，1440是让指针固定旋转4圈
+                callback: function(){
+                    $resultTxt.html(text);
+                    $result.show();
+                }
+            });
+        };
+
+        $resultBtn.click(function(){
+            $result.hide();
+        });
+    });
 </script>
 </body>
 </html>
