实现摇一摇红包程序

--- a/Addons/Shop/View/default/User/red.html
+++ b/Addons/Shop/View/default/User/red.html
@@ -5,15 +5,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <title>摇一摇</title>
-    <link rel="stylesheet" type="text/css" href="{:ADDON_PUBLIC_PATH}/user/css/style.css}">
-    <link rel="stylesheet" type="text/css" href="{:ADDON_PUBLIC_PATH}/user/css/animate.min.css}">
-    <script type="text/javascript" src="{:ADDON_PUBLIC_PATH}/user/js/zepto.min.js}"></script>
-    <script type="text/javascript" src="{:ADDON_PUBLIC_PATH}/user/js/red.js}"></script>
+    <link rel="stylesheet" type="text/css" href="{:ADDON_PUBLIC_PATH}/user/css/style.css">
+    <link rel="stylesheet" type="text/css" href="{:ADDON_PUBLIC_PATH}/user/css/animate.min.css">
+    <script type="text/javascript" src="{:ADDON_PUBLIC_PATH}/user/js/zepto.min.js"></script>
+    <script type="text/javascript" src="{:ADDON_PUBLIC_PATH}/user/js/red.js"></script>
 </head>
 <body>
 <!-- 红包音乐 -->
-<audio id="shakemusic" src="{:ADDON_PUBLIC_PATH}/user/music/red-01.mp3}" style="display: none;"></audio>
-<audio id="openmusic" src="{:ADDON_PUBLIC_PATH}/user/music/red-02.mp3}" style="display: none;"></audio>
+<audio id="shakemusic" src="{:ADDON_PUBLIC_PATH}/user/music/red-01.mp3" style="display: none;"></audio>
+<audio id="openmusic" src="{:ADDON_PUBLIC_PATH}/user/music/red-02.mp3" style="display: none;"></audio>
 <!-- End 红包音乐 -->
 <!-- 红包 -->
 <div class="red_bg">
