--- a/Addons/Shop/View/default/User/red.html
+++ b/Addons/Shop/View/default/User/red.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <title>摇一摇</title>
+    <title>好之鲜摇一摇抽奖</title>
     <link rel="stylesheet" type="text/css" href="{:ADDON_PUBLIC_PATH}/user/css/style.css">
     <link rel="stylesheet" type="text/css" href="{:ADDON_PUBLIC_PATH}/user/css/animate.min.css">
     <script type="text/javascript" src="{:ADDON_PUBLIC_PATH}/user/js/zepto.min.js"></script>
@@ -28,11 +28,11 @@
         <!-- 已中奖 -->
         <div class="red-yzj">
             <div class="red-tc-k">
-                <p>￥<span>50.00</span>元</p>
-                恭喜你获得</br>打包幸福代金券
+                <p><span>一等奖</span></p>
+                恭喜你获得</br>好之鲜一等奖
             </div>
             <div class="red-tc-btn">
-                <button>查看优惠券</button>
+                <button>查看奖品</button>
             </div>
         </div>
         <!-- End 已中奖 -->
